--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,7 @@
   <meta name="description" content="Web site created using create-react-app" />
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-  <title>Social App</title>
+  <title>Cyber City Comics</title>
 </head>
 
 <body>
