--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
+  <base href="/">
+
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <title>Cyber City Comics</title>
